# Aglaea

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_CODE_PROMPT.md  SPEC.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/aglaea/: __init__.py  config.py  db.py  logging_config.py  main.py  ntfy.py  promql.py  seed.py
backend/aglaea/llm/: __init__.py  context.py  deepseek.py  prompts.py
backend/aglaea/middleware/: __init__.py  rate_limit.py  request_id.py
backend/aglaea/models/: __init__.py  _portable.py  admin.py  api_keys.py  audit.py  base.py  heartbeat.py  incident_updates.py  incidents.py  services.py
backend/aglaea/routers/: _deps.py  admin.py  admin_audit.py  admin_cc.py  admin_incidents.py  admin_keys.py  auth.py  public.py  service_push.py
backend/aglaea/schemas/: __init__.py  heartbeat.py  incident.py  public.py  service.py
backend/aglaea/security/: __init__.py  audit.py  auth.py  bearer.py  timestamp.py  visibility.py
backend/aglaea/services/: __init__.py  timeline.py
backend/aglaea/workers/: __init__.py  _invariants.py  incident_detector.py  pull_prober.py  report_generator.py  (+1 more)
backend/alembic/: env.py
backend/tests/: conftest.py  test_admin_api.py  test_audit.py  test_auth.py  test_bearer.py  test_cooldown_smoke.py  test_heartbeat_ingest.py  test_incident_detector.py  test_llm_context_allowlist.py  test_migrations.py  test_public_api.py  test_public_incidents_feed.py  test_pull_prober.py  test_rate_limit.py  test_report_generator.py  test_self_ping.py  test_timestamp.py  test_visibility.py  test_workers_lifespan.py
(+127 files in other folders)
