[project]
name = "aglaea"
version = "0.1.0"
description = "Aglaea v0.1 — personal SRE platform on status.lushuyu.site"
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Shuyu Lu", email = "aqoursfun@gmail.com" }]

dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "httpx>=0.27",
    "argon2-cffi>=23.1",
    "python-json-logger>=2.0",
    "authlib>=1.3",
    "itsdangerous>=2.2",
    "starlette>=0.40",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "testcontainers>=4.0",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aglaea"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "C4", "RET", "SIM"]
ignore = [
    "S101", # asserts in tests are fine
    "B008", # FastAPI Depends() default-arg pattern
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["testcontainers.*", "authlib.*", "pythonjsonlogger.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
